<resources>
    <string name="app_name">EveryEvent</string>
    <string name="create">create</string>
    <string name="log_out">Log out</string>
    <string name="login_prompt">Login</string>
    <string name="login_btn">Login</string>
    <string name="settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_event_details">MyEventDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_my_account">MyAccount</string>
    <string name="my_account">My Account</string>
    <string name ="datetime">eventItem.date + eventItem.time</string>
    <string name="details">Details</string>
    <string name="this_user_will_be_permanently_deleted">This user will be permanently deleted</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="forgotten_password">Forgotten your password?</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="delete">Click here to delete this event</string>
    <string name="deleteConfirm">Are you sure you want to delete this event?</string>
</resources>